--- a/book-dev.yaml
+++ b/book-dev.yaml
@@ -1,6 +1,6 @@
 message: Hello, World from dev
 openapi:
   service:
-    title: book
+    title: Book Microservice
     version: 1.0
     url: http://localhost:8081
